# dejure

./: Makefile  README.md  bot.py  config-default.json  main.py  pyproject.toml  tests.py
core/: __init__.py  models.py  store.py  tools.py
